<resources>
    <string name="app_name">Digital District Map</string>
    <string name="home">হোম</string>
    <string name="pic">ছবি গ্যালারী</string>
    <string name="video">ভিডিও গ্যালারী</string>
    <string name="contact">যোগাযোগ</string>
    <string name="rate">রেটিং</string>
    <string name="branding">দেশের প্রতিটি জেলাকে নিজস্ব বৈশিষ্ট্যে পরিচিতি করতে ‘জেলা ব্র্যান্ডিং’ কৌশল প্রণয়ন করা হয়েছে।দেশের প্রতিটি জেলা তার ঐতিহ্য, নিজস্ব স্বকীয়তা, বিশেষায়িত পণ্য, পর্যটক আকর্ষণ, ঐতিহ্যের সংস্কৃতি ইত্যাদি বিষয়গুলো জেলার ব্র্যান্ডিংয়ের আওতায় এসেছে। প্রতিটি জেলার জন্য আলাদা ‘লোগো’ রয়েছে।</string>
    <string name="click">বইটি দেখুন এখানে</string>
    <string name="panchagar">পঞ্চগড় নামকরণ সমন্ধে কেউ কেউ মনে করে থাকেন যে, এ অঞ্চলটি অতি প্রাচীনকালে ‘পুন্ডুনগর রাজ্যের অর্ন্তগত ‘পঞ্চনগরী’ নামে একটি অঞ্চল ছিল। কালক্রমে পঞ্চনগরী ‘পঞ্চগড়’ নামে আত্মপ্রকাশ করে। ‘পঞ্চ’ (পাঁচ) গড়ের সমাহার ‘পঞ্চগড়’ নামটির অপভ্রাংশ ‘পঞ্চগড়’ দীর্ঘকাল এই জনপদে প্রচলিত ছিল। কিন্তু এই অঞ্চলের নাম যে, পঞ্চগড়ই ছিল সে ব্যাপারে কোন সন্দেহ থাকতে পারে না। বস্তুতঃ ভারতীয় উপমহাদেশে ‘পঞ্চ’ শব্দটি বিভিন্ন স্থানের নামের সাথে যুক্ত হয়েছে। যেমন- পঞ্চনদ, পঞ্চবটি, পঞ্চনগরী পঞ্চগৌড় ইত্যাদি। সুতরাং পঞ্চগৌড়ের একটি অংশ হিসেবে প্রাকৃত ভাষার বৈশিষ্ট্য অনুযায়ী পঞ্চগড়ের নামকরনের সম্ভাবনা থকে যায়। অর্থ্যাৎ পঞ্চগৌড় > পঞ্চগোড়>পঞ্চগড়। আবার কিছুটা ভিন্ন মতে ‘পঞ্চ’ শব্দের অর্থ পাঁচ, আর ‘গড়’ শব্দের অর্থ বন বা জঙ্গল।সেই সূত্র মতে পাঁচটি গড়ের সমষ্টি হওয়ার কারণে এ অঞ্চলের নাম হয়েছে পঞ্চগড়।এটা বিশ্বাস করা কঠিন হলেও সত্যি যে, দেশ ভাগ হবার আগ পর্যন্তও এই অঞ্চলটি ছিল জনমানুষ বিরল একটি বড় বন-জঙ্গল পূর্ণ এলাকা। সে জঙ্গলে বন্য হাতী, অসংখ্যা প্রাজাতির পাখিসহ বিভিন্ন বন্যপ্রানীর বাঘ পর্যন্ত ছিল।তবে মানুষের সংখ্যা বারার সাথে সাথে পরিবর্তনও এসেছে অনেক দ্রুত। এখণকার দিনে ওই ধরনের বন্যভুমি দেখতে পাওয়া একেবারেই বাহুল্য বলা যায়।</string>
    <string name="thakurgaon">টাংগন, শুক ও সেনুয়া বিধৌত এই জনপদের একটি ঠাকুর পরিবারের উদ্যোগে বৃটিশ শাসনমলে বর্তমান পৌরসভা এলাকার কাছাকাছি কোনো স্হানে একটি থানা স্হাপিত হয়। এই পরিবারের নাম অনুসারে থানাটির নাম হয় ঠাকুরগাঁও থানা। "ঠাকুর" অর্থাৎ ব্রাহ্মণদের সংখ্যাধিক্যের কারণে স্হানটির নাম ঠাকুরগাঁও হয়েছে।১৭৯৩ সালে ঠাকুরগ্রাম অবিভক্ত দিনাজপুর জেলার থানা হিসেবে প্রতিষ্ঠিত হয়।১৮৬০ সালে এটি মহকুমা হিসেবে ঘোষিত হয়। এর অধীনে ছয়টি থানা ছিল, এগুলো হলঃ ঠাকুরগাঁও সদর, বালিয়াডাঙ্গী, পীরগঞ্জ, রাণীশংকৈল, হরিপুর ও আটোয়ারী। ১৯৪৭ সালে এই ৬টি থানা এবং ভারতের জলপাইগুড়ি জেলার ৩টি থানা ও কোচবিহারের ১টি থানা (পঞ্চগড়, বোদা, তেতুলিয়া ও দেবীগঞ্জ) নিয়ে ১০টি থানার মহকুমা হিসেবে ঠাকুরগাঁও নুতনভাবে যাত্রা শুরু করে। কিন্ত ১৯৮১ সালে আটোয়ারী, পঞ্চগড়, বোদা, দেবীগঞ্জ ও তেতুলিয়া নিয়ে পঞ্চগড় নামে আলাদা মহকুমা সৃষ্টি হলে ঠাকুরগাঁও মহকুমার ভৌগোলিক সীমানা ৫টি থানায় সংকুচিত হয়ে যায়। থানাগুলি হচ্ছেঃ ঠাকুরগাঁও সদর, পীরগঞ্জ, রাণীশংকৈল, বালিয়াডাঙ্গী ও হরিপুর। ১৯৮৪ সালের ১লা ফেব্রুয়ারী ঠাকুরগাঁও মহকুমা জেলায় উন্নীত হয়।ঠাকুরগাঁও জেলায় বাংলাদেশ প্রত্নতত্ত্ব অধিদপ্তর এর তালিকাভুক্ত দুটি প্রত্নতাত্ত্বিক স্থাপনা আছে। সেগুলো হচ্ছে ঢোলহাট মন্দির ও জামালপুর জামে মসজিদ।এছাড়াও বাংলাদেশ সরকার নিয়ন্ত্রিত গুরুত্বপূর্ণ স্থাপনা হচ্ছে হরিপুর রাজবাড়ি।</string>
    <string name="lalmonirhut">এ জেলার নাম কেন লালমনিরহাট হলো সে সম্পর্কে বেশ কয়েকটি মত চালু আছে। সেগুলো হলো-মাটির নিচে লাল পাথর দেখতে পায়। সেই থেকে এ জায়গার নাম হয়েছে লালমনি।স্বীকৃতিস্বরূপ এলাকার লোকজন নামে রাখে লালমনি ।১৭৮৩ সালে সাধারণ কৃষকদের অধিকার প্রতিষ্ঠার জন্য লালমনি নামে এক মহিলা কৃষক নেতা নুরুলদিনকে সাথে নিয়ে বৃটিশ সৈন্য ও জমিদারদের বিরুদ্ধে লড়াই করে নিজেদের জীবন উৎসর্গ করে। সেই থেকে এ জায়গার নাম হয় লালমনি। কালের বিবর্তনে হাট শব্দটি লালমনি শব্দের সাথে যুক্ত হয়ে লালমনিরহাট নামকরণ হয়েছে।লালমনিরহাট সদর উপজেলায় বাংলাদেশ প্রত্নতত্ত্ব অধিদপ্তর এর তালিকাভুক্ত একটি প্রত্নতাত্ত্বিক স্থাপনা আছে। সেটি হচ্ছে নিদারিয়া মসজিদ।</string>
    <string name="dinajpur">দিনাজপুর জেলা বাংলাদেশের উত্তর-পশ্চিমাঞ্চলের রংপুর বিভাগের একটি প্রশাসনিক অঞ্চল। এই অঞ্চল ভূতাত্ত্বিকভাবে ইন্ডিয়ান প্লেটের অংশ যা আদি জুরাসিক যুগে সৃষ্টি হওয়া গন্ডোয়ানাল্যান্ডের অংশ ছিল। এজন্য এই এলাকাকে গন্ডোয়ানাল্যান্ড বলা হত।জনশ্রুতি আছে জনৈক দিনাজ অথবা দিনারাজ দিনাজপুর রাজপরিবারের প্রতিষ্ঠাতা। তার নামানুসারেই রাজবাড়ীতে অবস্থিত মৌজার নাম হয় দিনাজপুর। পরবর্তীতে ব্রিটিশ শাসকরা ঘোড়াঘাট সরকার বাতিল করে নতুন জেলা গঠন করে এবং রাজার সম্মানে জেলার নামকরণ করে দিনাজপুর।১৭৬৫ সালে দেওয়ানি গ্রহণের ফলে দিনাজপুর জেলা ইস্ট ইন্ডিয়া কোম্পানির নিয়ন্ত্রণভুক্ত হয়। সেই সময় লক্ষনৌতী, বাজিন্নাতাবাদ, তেজপুর, পানজারা, ঘোড়াঘাট, বারবকাবাদ ও বাজুহা, এই ছয়টি সরকারের অংশ নিয়ে দিনাজপুর জেলা গঠিত হয়। ১৭৮৬ সালে দিনাজপুর জেলা হিসেবে ঘোষিত হয়। দিনাজপুর সদরে জেলা সদর গঠিত হয়।দিনাজপুর একসময়ে একটি নামকরা জনপদ পুন্দ্রবর্ধনের অংশ ছিল। লাখনাউটির রাজধানি দেভকটের অবস্থান ছিল এর ১১ মাইল দক্ষিণে। ততকালীন ইংরেজ শাসকদের “The British Administrative Control” এখানে ১৭৮৬ সনে গঠিত হয়। ১৯৪৭ সালে বঙ্গভঙ্গের সময়ে দিনাজপুরের একটি বড় অংশ পশ্চিমবঙ্গে চলে যায় এবং তার নাম হয় পশ্চিম দিনাজপুর জেলা। এ জেলার জনগনেরা তেভাগা আন্দোলনে অংশগ্রহন করে এবং ১৯৭১ সালের মুক্তিযুদ্ধে উল্লেখযোগ্য ভূমিকা রাখে।</string>
    <string name="kurigram">কুড়িগ্রাম জেলা বাংলাদেশের উত্তর-পশ্চিমাঞ্চলের রংপুর বিভাগের একটি প্রশাসনিক অঞ্চল।কুড়িগ্রাম জেলার নামকরণের ইতিহাস নিয়ে অনেক কিংবদন্তি রয়েছে।কোন এক সময় মহারাজা বিশ্ব সিংহ কুড়িটি জেলে পরিবারকে উচ্চ শ্রেণীর হিন্দুরূপে স্বীকৃতি দিয়ে এ অঞ্চলে প্রেরণ করেন। এ কুড়িটি পরিবারের আগমনের কাহিনী থেকে কুড়িগ্রাম জেলার নামকরণ করা হয়েছে বলে ধারণা করা হয়। বিলু কবীরের লেখা বাংলাদেশের জেলা নামকরণের ইতিহাস বই থেকে জানা যায়, এখানে কুড়িটি মেচ্ তৈলজীবী পরিবারের বসতি ছিল বলে এ রকম নামকরণ হয়েছে। অন্য আরেকটি লোকশ্রুতি হলো : রঙ্গপুর অর্থাৎ এই অঞ্চল একদা ছিল কুচবিহার রাজ্যের অন্তর্গত। কুচবিহারের বাসিন্দাদের বলা হয় কোচ। এরা তিওড় গোষ্ঠীবিশেষও। মাছ ধরে বিক্রি করা তাদের পেশা। সুবিধাবঞ্চিত নীচু শ্রেণীর এই হিন্দু কোচদের কুড়িটি পরিবারকে সেখান থেকে এখানে প্রেরণ করা হয়েছিল বা আনয়ন করা হয়েছিল বসতি স্থাপনে জন্য। ওই কুড়িটি কোচ পরিবারের কারণে কুড়িগ্রাম নামকরণ হয়েছে। আবার এমনও জানা যায়, এই গ্রামে কুরি বা কুরী নামক একটি হিন্দু আদিবাসী বা নৃগোষ্ঠী বসবাস করত বলেই অঞ্চলটির নাম হয় কুড়িগ্রাম। অদ্যাবধি এখানে কুরি নামক আদিবাসী ক্ষুদ্র নৃগোষ্ঠীর বসবাস লক্ষ্য করা যায়। এখনও এ অঞ্চলে কুড়ি হিসেবে গোনার পদ্ধতি চালু রয়েছে। বিশিষ্ট পণ্ডিত জা পলিলুস্কি প্রমাণ করেছেন, গণনার এ পদ্ধতি বাংলায় এসেছে কোল ভাষা থেকে। কোল অস্ট্রিক ভাষাগোষ্ঠীর অন্তর্গত। আরব অস্ট্রিক ভাষায় কুর বা কোর ধাতুর অর্থ হলো মানুষ। কুড়ি হিসেবে গোনার পদ্ধতিটিও এসেছে মানুষ থেকেই। এ অস্ট্রিক কারা? পন্ডিতদের মতে, প্রত্নপ্রস্তর যুগে এ অঞ্চলে বাস করত নিগ্রো জাতি। এরপর আসে নব্যপ্রস্তর যুগ। আসামের উপত্যকা অতিক্রম করে আসে অস্ট্রিক জাতীয় জনগোষ্ঠী। তারপরে আসে দ্রাবিড় ও মঙ্গোলীয়রা। এদের মিলিত স্রোতে ব্রহ্মপুত্র উপত্যকায় মানবসভ্যতার সূচনা হয়। এরাই লাঙ্গল দিয়ে চাষের প্রবর্তন করেছে। কুড়ি হিসেবে গোনার পদ্ধতি করেছে চালু। নদনদীতে ডিঙি বেয়েছে, খেয়েছে শুঁটকি, খেয়েছে বাইগন বা বেগুন, লাউ বা কদু, কদলী বা কলা, জাম্বুরা, কামরাঙ্গা। করেছে পশু পালন। এঁকেছে কপালে সিঁন্দুর। করেছে রেশম চাষ। করেছে তামা, ব্রোঞ্জ ও সোনার ব্যবহার। প্রসঙ্গত বলা প্রয়োজন, ১৮৫৮ সাল পর্যন্ত দেশ শাসন করত ইস্ট ইন্ডিয়া কোম্পানি। ১৮৫৮ সালের পর শাসনকার্যের ক্ষমতা চলে যায় ব্রিটিশ সরকারের হাতে। এই ব্রিটিশ সরকারের আমলে কুরিগঞ্জ চারটি থানায় বিভক্ত ছিল। পরে ১৮৭৫ সালে ২২ এপ্রিল তারিখে একটি নতুন মহকুমার গোড়াপত্তন হয়। এ মহকুমার নাম কুড়িগ্রাম। কুড়িগ্রামঘেষা ব্রহ্মপুত্রের কারণে এখানে আসে বিভিন্ন আদিম জনগোষ্ঠী। এসব কারণে এখানে গড়ে উঠেছিল একটি সভ্যতাও। বিজিত আর্যদের কোন স্মৃতি এখানে নেই। তবে অন্যদের কিছু কিছু ক্ষীয়মাণ রাজচিহ্ন রয়েছে। বারো বা দ্বাদশ শতকের প্রথমপর্বে এ অঞ্চলে সেন রাজবংশের শাসনকাল আরম্ভ হয়। রাজারহাটের বিদ্যানন্দ ইউনিয়নের চত্রা নামক গ্রামে এদের রাজধানী ছিল। এ বংশের উল্লেখযোগ্য কয়েকজন রাজার নাম নীলধ্বজ সেন, চক্রধ্বজ সেন, নীলাম্বর সেন। সেনবংশের পতনের পর শুরু হয় মুঘল যুগ।</string>
    <string name="rangpur">রংপুর বিভাগ বাংলাদেশের আটটি প্রশাসনিক বিভাগের অন্যতম নবীন ও মঙ্গা পীড়িত একটি বিভাগ। এটি বাংলাদেশের উত্তরাঞ্চলের ৮টি জেলা নিয়ে গঠিত। ২০১০ খ্রিষ্টাব্দের ২৫ জানুয়ারিতে বাংলাদেশের সপ্তম বিভাগ হিসেবে ঘোষিত হয়।বাংলাদেশ সরকারের প্রশাসনিক পূণর্বিন্যাসসংক্রান্ত জাতীয় বাস্তবায়ন কমিটি (National Implementation Committee for Administrative Reform:NICAR) ২০১০ খ্রিষ্টাব্দের ২৫ জানুয়ারি তারিখে রংপুরকে দেশের সপ্তম বিভাগ হিসেবে অনুমোদন দেয়। এর আগে ২০০৯ খ্রিষ্টাব্দের ১৩ জুলাই তারিখে মন্ত্রীসভার বৈঠকে রংপুরকে বিভাগ করার সিদ্ধান্ত গৃহীত হয়। এতে একটি কমিটি তৈরি করা হয় এবং কমিটি ২১ জুলাই তারিখে প্রতিবেদন জমা দেয়।</string>
    <string name="jaipurhut">জয়পুরহাট জেলা বাংলাদেশের উত্তর-পশ্চিমাঞ্চলের রাজশাহী বিভাগের একটি প্রশাসনিক অঞ্চল।স্বাধীন বাংলায় বৃটিশ শাসনামলে ১৮২১ সালে বৃহত্তর রাজশাহী জেলার চারটি, রংপুর জেলার ২টি ও দিনাজপুর জেলার ৩টি থানা নিয়ে যে বগুড়া জেলা গঠিত হয়েছিল তারই অংশ নিয়ে ১৯৭১ সালে প্রথমে জয়পুরহাট মহকুমা এবং পরবর্তীকালে ১৯৮৪ সালে জয়পুরহাট জেলা গঠিত হয়।ষোড়শ এবং সপ্তদশ শতাব্দী পর্যন্ত জয়পুরহাটের ইতিহাস অস্পষ্ট; কারণ এই সময়ে ভারতবর্ষের ইতিহাসে জয়পুরহাটের কোন স্বতন্ত্র ভৌগোলিক অবস্থান ছিল না। জয়পুরহাট দীর্ঘকাল গৌড়ের পাল এবং সেন রাজাদের রাজ্য ভূক্ত ছিল। সে সময় জয়পুরহাট নামে কোন স্থান পাওয়া যায় না । এমনকি জয়পুরহাটের পূর্ব অবস্থান বগুড়ারও কোন ভৌগোলিক অস্তিত্ব ছিল না। পূর্বে চাকলা ঘোড়াঘাট এবং পরবর্তীতে দিনাজপুর জেলার অন্তর্ভুক্ত ছিল জয়পুরহাট।বর্তমানে জয়পুরহাট এবং পাঁচবিবি উপজেলার গ্রামসমূহ নিয়ে একসময় লালবাজার থানা গঠিত হয়েছিল। জয়পুরহাট সদর থানার পশ্চিম প্রান্তে যমুনা নদীর পুর্ব তীরে পুরানাপৈল এলাকায় এই থানা অবস্থিত ছিল। স্থানটি বর্তমানে করিমনগর বলে পরিচিত। করিমনগর সরকারি প্রাথমিক বিদ্যালয়ের নিকট যুমনা নদীর ঘাটকে আজও থানার ঘাট বলা হয়। এর দক্ষিণেও যে স্থানে বাজার ছিল তাকে বর্তমানে বাজারের ভিটা বলা হয়। এই লাল বাজারে সেই সময়ে পোস্ট অফিস স্থাপিত হয়েছিল। সাব-রেজিষ্ট্রি অফিস ছিল আক্কেলপুর রেলষ্টেশনের পূর্ব দিকে নবাবগঞ্জ নামক স্থানে। লাল বাজার থানার এবং খঞ্জনপুর কুঠির ভারপ্রাপ্ত ইংরেজ কর্মকর্তার তত্ত্বাবধায়নে পলিবাড়ি, খঞ্জনপুর,পুরানাপৈল,পাচবিবি প্রভৃতি স্থানে নীল কুঠি স্থাপিত হয়েছিল। তৎকালে লালবাজার ছিল শহর এবং সাধারণ মানুষের জীবিকার একমাত্র কর্মস্থল। দেশে তখনো রেল লাইন স্থাপিত হয়নি। মালামাল আমদানি, রপ্তানি এবং একস্থান হতে অন্য স্থানে স্থানান্তরিত করার জন্য নদীপথ ব্যতীত অন্য উপায় ছিল না। যমুনা নদী ছিল ভীষণ খরস্রোতা। লাল বাজার থানা ঘাটে মহাজন ও সওদাগরী নৌকা ভিড়ত। প্রয়োজনীয় জিনিসপত্র উঠানামা করত। এই নদী পথেই দূর দূরান্তে যাতায়াত ও ব্যবসা বাণিজ্য চলত। সে সময় লাল বাজার, ক্ষেতলাল এবং বদলগাছী থানা দিনাজপুর জেলার অন্তর্ভুক্ত ছিল। দিনাজপুর, রংপুর ও রাজশাহী জেলার আয়তন এত বৃহৎ ছিল যে একজন প্রশাসকের পক্ষে সমগ্র জেলা নজর রাখা সম্ভব হত না। তাই ১৮২১ সালে ভারতের তৎকালীন বড়লাট বাহাদুর রাজশাহী, রংপুর এবং দিনাজপুর হতে কয়েকটি থানা নিয়ে বগুড়া জেলা গঠন করেন। এসময় রাজশাহী হতে শেরপুর, বগুড়া এবং আদমদিঘী থানা, রংপুর হতে দেওয়ানগঞ্জ ও গোবিন্দগঞ্জ থানা এবং দিনাজপুর হতে ক্ষেতলাল, বদলগাছী ও লাল বাজার থানা বিচ্ছিন্ন করে বগুড়া জেলার সৃষ্টি হয়েছিল। ব্যান্ডেল সাহেব ছিলেন বগুড়ার প্রথম ম্যাজিস্ট্রেট।</string>
    <string name="gaibandha">গাইবান্ধা জেলা বাংলাদেশের উত্তরাঞ্চলের রংপুর বিভাগ এর একটি প্রশাসনিক অঞ্চল।কথিত আছে আজ থেকে প্রায় ৫২০০ বছর আগে গাইবান্ধা জেলার গোবিন্দগঞ্জ এলাকায় বিরাট রাজার রাজধানী ছিল। বিরাট রাজার প্রায় ৬০ (ষাট) হাজার গাভী ছিল। সেই গাভী বাধার স্থান হিসাবে গাইবান্ধা নামটি এসেছে বলে কিংবদন্তী রয়েছে। ১৯৮৪ ইং সালের ১৫ অগাস্ট বুধবার ২রা ফাল্গুন ১৩৯০ বাংলা ১২ ই জমাদিউল আউয়াল ১৪০৪ হিজরী সনে গাইবান্ধা জেলা হিসাবে প্রতিষ্ঠিত হয়।গাইবান্ধা জেলার উত্তরে কুড়িগ্রাম ও রংপুর জেলা, দক্ষিণে বগুড়া ও জয়পুরহাট জেলা, পূর্বে জামালপুর জেলা, তিস্তা ও যমুনা নদী এবং পশ্চিমে রংপুর, দিনাজপুর ও জয়পুরহাট জেলা অবস্থিত।</string>
</resources>